trabajando en la tabla para mostrar los desceuntos